Create HTML UI Templates

--- a/UI/admin/all-food-items.html
+++ b/UI/admin/all-food-items.html
@@ -54,7 +54,7 @@
                 <div class="dropdown-content">
                     <a href="all-orders.html">All Orders</a>
                     <a href="pending-orders.html">Pending Orders</a>
-                    <a href="processed-orders.html">Processed Orders</a>
+                    <a href="processed-orders.html">In-Process Orders</a>
                 </div>
             </div>
             <div class="dropdown profile">
