--- a/UI/index.html
+++ b/UI/index.html
@@ -38,8 +38,8 @@
                     <button class="primary-colour ">
                         <a href="login.html" class="white-text">Order now</a>
                     </button>
-                    <button>
-                        <a href="signup.html">Sign up now</a>
+                    <button class="green-bg">
+                        <a href="signup.html" class="white-text">Sign up now</a>
                     </button>
                 </div>
             </div>
