--- a/UI/signup.html
+++ b/UI/signup.html
@@ -55,7 +55,7 @@
                             </div>
                             <br/>
                             <div class="">
-                                <input type="submit" class="btn" value="Sign In" />
+                                <input type="submit" class="btn primary-colour white-text" value="Sign Up" />
                             </div>
                             <br/>
                             <div class="">
