--- a/UI/users/confirm-order.html
+++ b/UI/users/confirm-order.html
@@ -45,7 +45,6 @@
         <div class="container">
             <h2 class="text-center">Confirm Order</h2>
             <hr>
-            <div class="">
                 <div class="order-container">
                     <div class="item-container">
                         <div class="img-container">
@@ -54,10 +53,10 @@
                         <div class="order-details">
                             <h1>Traditional French dessert</h1>
                             <h3>Price: &#8358;1500</h3>
-                            <h3>Quantity(packs):</h3><input type="number" id="quantity" />
+                            <h3>Quantity(packs):<input type="number" id="quantity" /></h3>
                             
                             <h3>Total: &#8358;1500</h3>
-                            <button class="primary-colour white-text">
+                            <button class="primary-colour">
                                 <a href="order-successful.html" class="white-text">Confirm Order</a>
                             </button>
                         </div>
@@ -67,7 +66,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
         </div>
     </main>
     <!-- Main content Ends -->
