--- a/UI/a-skeleton.html
+++ b/UI/a-skeleton.html
@@ -32,7 +32,7 @@
                     <div class="dropdown-content">
                         <a href="all-orders.html">All Orders</a>
                         <a href="#">Pending Orders</a>
-                        <a href="#">Processed Orders</a>
+                        <a href="#">In-Process Orders</a>
                     </div>
                 </div>
                 <div class="dropdown profile">
