--- a/UI/admin/edit-food-items.html
+++ b/UI/admin/edit-food-items.html
@@ -33,7 +33,7 @@
                 <div class="dropdown-content">
                     <a href="all-orders.html">All Orders</a>
                     <a href="pending-orders.html">Pending Orders</a>
-                    <a href="processed-orders.html">Processed Orders</a>
+                    <a href="processed-orders.html">In-Process Orders</a>
                 </div>
             </div>
             <div class="dropdown profile">
@@ -81,7 +81,7 @@
                             </div>
                             <br/>
                             <div class="">
-                                <input type="submit" class="btn" value="Modify food" />
+                                <input type="submit" class="btn primary-colour white-text" value="Modify food" />
                             </div>
 
                         </form>
