--- a/UI/admin/login.html
+++ b/UI/admin/login.html
@@ -15,7 +15,7 @@
     <header>
         <!-- Navigation bar Starts -->
         <nav class="navbar" id="myNav">
-            <a href="#" class="nav-brand">Fast-Food-Fast [Admin]</a>
+            <a href="../index.html" class="nav-brand">Fast-Food-Fast [Admin]</a>
 
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
         </nav>
@@ -43,7 +43,7 @@
                             </div>
                             <br/>
                             <div class="">
-                                <input type="submit" class="btn" value="Sign In" />
+                                <input type="submit" class="btn primary-colour white-text" value="Sign In" />
                             </div>
                             
                         </form>
