--- a/UI/admin/processed-orders.html
+++ b/UI/admin/processed-orders.html
@@ -32,7 +32,7 @@
                 <div class="dropdown-content">
                     <a href="all-orders.html">All Orders</a>
                     <a href="pending-orders.html">Pending Orders</a>
-                    <a href="processed-orders.html">Processed Orders</a>
+                    <a href="processed-orders.html">In-Process Orders</a>
                 </div>
             </div>
             <div class="dropdown profile">
@@ -54,7 +54,7 @@
             <section class="box-section">
                 <div class="box-container">
                     <div class="table-container">
-                        <h2>All Orders</h2>
+                        <h2>In-Process Orders</h2>
                         <div>
                             <h3>Filter orders by date</h3>
                             <input type="date" class="datepicker" />
