--- a/UI/admin/view-order.html
+++ b/UI/admin/view-order.html
@@ -54,7 +54,7 @@
                 <div class="dropdown-content">
                     <a href="all-orders.html">All Orders</a>
                     <a href="pending-orders.html">Pending Orders</a>
-                    <a href="processed-orders.html">Processed Orders</a>
+                    <a href="processed-orders.html">In-Process Orders</a>
                 </div>
             </div>
             <div class="dropdown profile">
@@ -83,7 +83,7 @@
                             </div>
 
                             <div class="item-details">
-                                <p>#1120 12-08-2018 12:09:00</p>
+                                <p>#1120 - 12-08-2018 12:09:00</p>
                                 <h3>Shawarma and Sauce</h3>
                                 <p>Price: &#8358;1500</p>
                                 <p>Quantity: 4</p>
