--- a/UI/login.html
+++ b/UI/login.html
@@ -43,7 +43,7 @@
                             </div>
                             <br/>
                             <div class="">
-                                <input type="submit" class="btn" value="Sign In" />
+                                <input type="submit" class="btn primary-colour white-text" value="Sign In" />
                             </div>
                             <br/>
                             <div class="">
