Create HTML UI Templates

--- a/UI/admin/view-order.html
+++ b/UI/admin/view-order.html
@@ -14,26 +14,26 @@
 
 <body>
 
-       <!-- Modal Starts -->
-       <div id="modal" class="modal">
-            <div class="modal-content">
-                <div class="text-center">
-                    <h1 class="red-text">Decline Order</h1>
-                    <div class="">
-                        <img src="../assets/images/delete.png" alt="Decline" />
-                    </div>
-                    <div class="">
-                        <h1>Are you sure?</h1>
-                        <form onsubmit="redirectTo('decline-confirmation.html'); return false;">
-                            <input type="submit" class="btn secondary-colour white-text" value="Yes" />
-                            <button type="button" onclick="modalClosePopup(); return false;" class="btn btn-secondary modal-close">No</button>
-                        </form>
-                        <br />
-                    </div>
+    <!-- Modal Starts -->
+    <div id="modal" class="modal">
+        <div class="modal-content">
+            <div class="text-center">
+                <h1 class="red-text">Decline Order</h1>
+                <div class="">
+                    <img src="../assets/images/delete.png" alt="Decline" />
+                </div>
+                <div class="">
+                    <h1>Are you sure?</h1>
+                    <form onsubmit="redirectTo('decline-confirmation.html'); return false;">
+                        <input type="submit" class="btn secondary-colour white-text" value="Yes" />
+                        <button type="button" onclick="modalClosePopup(); return false;" class="btn btn-secondary modal-close">No</button>
+                    </form>
+                    <br />
                 </div>
             </div>
         </div>
-        <!-- Modal Ends -->
+    </div>
+    <!-- Modal Ends -->
     <header>
         <!-- Navigation bar Starts -->
         <nav class="navbar" id="myNav">
@@ -73,33 +73,34 @@
 
     <!-- Main content Starts -->
     <main>
-        <section class="box-section">
-            <div class="box-container">
-                    <div class="item-container">
-                        <div class="innerbox-container">
-                                <h1 class="text-center">Order Details</h1>
-                            <div class="img-container">
-                                <img class="img-fluid" src="../assets/images/item-2.jpg" alt="pastery" />
-                            </div>
-
-                            <div class="item-details">
-                                <p>#1120 - 12-08-2018 12:09:00</p>
-                                <h3>Shawarma and Sauce</h3>
-                                <p>Price: &#8358;1500</p>
-                                <p>Quantity: 4</p>
-                                <p>Amount Paid: &#8358;6000</p>
-                                <h5>Order by: Bruce Banner</h5>
-                            </div>
-                            <button class="green-bg white-text">
-                                <a href="accept-order-successful.html" class="white-text">Accept</a>
-                            </button>
-                            <button class="secondary-colour white-text">
-                                <a href="" onclick="modalPopup(); return false;" class="white-text">Decline</a>
-                            </button>
-                        </div>
+        <div class="container">
+            <h2 class="text-center">Order Details</h2>
+            <hr>
+            <div class="order-container">
+                    <div class="img-container">
+                        <img class="" src="../assets/images/item-2.jpg" alt="pastery" />
                     </div>
+                    <div class="order-details">
+                        <p><b>#1120</b> - 12-08-2018 12:09:00</p>
+                        <h3>Shawarma and Sauce</h3>
+                        <p>Price: &#8358;1500</p>
+                        <p>Quantity: 4</p>
+                        <p>Amount Paid: &#8358;6000</p>
+                        <h5>Order by: Bruce Banner</h5>
+                        <button class="green-bg white-text">
+                            <a href="accept-order-successful.html" class="white-text">Accept</a>
+                        </button>
+                        <button class="secondary-colour white-text">
+                            <a href="" onclick="modalPopup(); return false;" class="white-text">Decline</a>
+                        </button>
+                    </div>
+                <br>
+                <div>
+                    <a href="order-successful.html" class=""> << Back to Menu items</a>
+                </div>
             </div>
-        </section>
+        </div>
+        </div>
     </main>
     <!-- Main content Ends -->
     <footer>
