--- a/UI/users/confirm-order.html
+++ b/UI/users/confirm-order.html
@@ -46,7 +46,6 @@
             <h2 class="text-center">Confirm Order</h2>
             <hr>
                 <div class="order-container">
-                    <div class="item-container">
                         <div class="img-container">
                             <img class="img-fluid" src="../assets/images/pastery-1.jpg" />
                         </div>
@@ -59,12 +58,14 @@
                             <button class="primary-colour">
                                 <a href="order-successful.html" class="white-text">Confirm Order</a>
                             </button>
+                            <div>
+                                <a href="order-successful.html" class=""> << Back to Menu items</a>
+                            </div>
                         </div>
                         <br>
                         <div>
                             <a href="order-successful.html" class=""> << Back to Menu items</a>
                         </div>
-                    </div>
                 </div>
         </div>
     </main>
