Create HTML UI Templates

--- a/UI/admin/view-order.html
+++ b/UI/admin/view-order.html
@@ -96,7 +96,7 @@
                     </div>
                 <br>
                 <div>
-                    <a href="order-successful.html" class=""> << Back to Menu items</a>
+                    <a href="all-orders.html" class=""> << Back to all orders</a>
                 </div>
             </div>
         </div>
