--- a/UI/users/confirm-order.html
+++ b/UI/users/confirm-order.html
@@ -58,13 +58,11 @@
                             <button class="primary-colour">
                                 <a href="order-successful.html" class="white-text">Confirm Order</a>
                             </button>
-                            <div>
-                                <a href="order-successful.html" class=""> << Back to Menu items</a>
-                            </div>
+                            
                         </div>
                         <br>
                         <div>
-                            <a href="order-successful.html" class=""> << Back to Menu items</a>
+                            <a href="all-food-items.html" class=""> << Back to Menu items</a>
                         </div>
                 </div>
         </div>
