Create HTML UI Templates

--- a/UI/admin/processed-orders.html
+++ b/UI/admin/processed-orders.html
@@ -81,6 +81,7 @@
                                 <td>4</td>
                                 <td class="text-wrap">in progress...</td>
                                 <td>
+                                    <input type="checkbox" id="statusCheck" onclick="redirectTo('order-complete.html'); return false;">
                                     <a href="order-complete.html">Mark as Complete</a>
                                 </td>
                             </tr>
@@ -93,6 +94,7 @@
                                 <td>4</td>
                                 <td class="text-wrap">in progress...</td>
                                 <td>
+                                    <input type="checkbox" id="statusCheck" onclick="redirectTo('order-complete.html'); return false;">
                                     <a href="order-complete.html">Mark as Complete</a>
                                 </td>
                             </tr>
