--- a/UI/forgotpassword.html
+++ b/UI/forgotpassword.html
@@ -16,26 +16,8 @@
     <header>
         <!-- Navigation bar Starts -->
         <nav class="navbar" id="myNav">
-            <a href="#home" class="nav-brand">Fast-Food-Fast</a>
-            <a href="all-food-items.html">View Menu</a>
-            <div class="dropdown">
-                <button class="dropbtn">Orders
-                    <i class="fa fa-caret-down"></i>
-                </button>
-                <div class="dropdown-content">
-                    <a href="pending-orders.html">Pending Orders</a>
-                    <a href="order-history.html">Order history</a>
-                </div>
-            </div>
-            <div class="dropdown profile">
-                <button class="dropbtn">Howdy, Lebagerian
-                    <i class="fa fa-caret-down"></i>
-                </button>
-                <div class="dropdown-content">
-                    <a href="my-account.html">My Account</a>
-                    <a href="../login.html">Logout</a>
-                </div>
-            </div>
+            <a href="#" class="nav-brand">Fast-Food-Fast</a>
+            <!--<a href="">About</a>-->
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
         </nav>
         <!-- Navigation bar Ends -->
