Make class names of elements more descriptive based on feedback from LFA

--- a/UI/admin/add-food.html
+++ b/UI/admin/add-food.html
@@ -107,7 +107,7 @@
 
 
   <footer>
-    <div class="primary-colour">
+    <div class="blue-bg-colour">
       <div class="text-center white-text">
         Fast-Food-Fast &copy; 2018 &nbsp; Developed by
         <b>Juwon.</b>
