--- a/UI/admin/all-food-items.html
+++ b/UI/admin/all-food-items.html
@@ -23,7 +23,7 @@
         <div class="">
           <h1>Are you sure ?</h1>
           <form onsubmit="redirectTo('delete-food-successful.html'); return false;">
-            <input type="submit" class="btn secondary-colour white-text" value="Yes" />
+            <input type="submit" class="btn red-bg-colour white-text" value="Yes" />
             <button type="button" onclick="modalClosePopup(); return false;" class="btn btn-secondary modal-close">No</button>
           </form>
           <br />
@@ -94,7 +94,7 @@
               <button class="white-text green-bg">
                 <a href="edit-food-items.html" class="white-text">Edit</a>
               </button>
-              <button class="secondary-colour">
+              <button class="red-bg-colour">
                 <a href="" class="white-text" onclick="modalPopup(); return false;">Delete</a>
               </button>
             </div>
@@ -113,7 +113,7 @@
               <button class="white-text green-bg">
                 <a href="edit-food-items.html" class="white-text">Edit</a>
               </button>
-              <button class="secondary-colour">
+              <button class="red-bg-colour">
                 <a href="" class="white-text" onclick="modalPopup(); return false;">Delete</a>
               </button>
             </div>
@@ -132,7 +132,7 @@
               <button class="white-text green-bg">
                 <a href="edit-food-items.html" class="white-text">Edit</a>
               </button>
-              <button class="secondary-colour">
+              <button class="red-bg-colour">
                 <a href="" class="white-text" onclick="modalPopup(); return false;">Delete</a>
               </button>
             </div>
@@ -150,7 +150,7 @@
               <button class="white-text green-bg">
                 <a href="edit-food-items.html" class="white-text">Edit</a>
               </button>
-              <button class="secondary-colour">
+              <button class="red-bg-colour">
                 <a href="" class="white-text" onclick="modalPopup(); return false;">Delete</a>
               </button>
             </div>
@@ -175,7 +175,7 @@
               <button class="white-text green-bg">
                 <a href="edit-food-items.html" class="white-text">Edit</a>
               </button>
-              <button class="secondary-colour">
+              <button class="red-bg-colour">
                 <a href="" class="white-text" onclick="modalPopup(); return false;">Delete</a>
               </button>
             </div>
@@ -194,7 +194,7 @@
               <button class="white-text green-bg">
                 <a href="edit-food-items.html" class="white-text">Edit</a>
               </button>
-              <button class="secondary-colour">
+              <button class="red-bg-colour">
                 <a href="" class="white-text" onclick="modalPopup(); return false;">Delete</a>
               </button>
             </div>
@@ -213,7 +213,7 @@
               <button class="white-text green-bg">
                 <a href="edit-food-items.html" class="white-text">Edit</a>
               </button>
-              <button class="secondary-colour">
+              <button class="red-bg-colour">
                 <a href="" class="white-text" onclick="modalPopup(); return false;">Delete</a>
               </button>
             </div>
@@ -231,7 +231,7 @@
               <button class="green-bg">
                 <a href="edit-food-items.html" class="white-text">Edit</a>
               </button>
-              <button class="secondary-colour">
+              <button class="red-bg-colour">
                 <a href="" class="white-text" onclick="modalPopup(); return false;">Delete</a>
               </button>
             </div>
@@ -253,7 +253,7 @@
 
 
   <footer>
-    <div class="primary-colour">
+    <div class="blue-bg-colour">
       <div class="text-center white-text">
         Fast-Food-Fast &copy; 2018 &nbsp; Developed by
         <b>Juwon.</b>
