--- a/UI/admin/all-orders.html
+++ b/UI/admin/all-orders.html
@@ -58,7 +58,7 @@
           <div>
             <h3>Filter orders by date</h3>
             <input type="date" class="datepicker" />
-            <button class="primary-colour white-text">Filter</button>
+            <button class="blue-bg-colour white-text">Filter</button>
           </div>
           <!--Table for orders starts here-->
           <table>
@@ -136,7 +136,7 @@
   </main>
   <!-- Main content Ends -->
   <footer>
-    <div class="primary-colour">
+    <div class="blue-bg-colour">
       <div class="text-center white-text">
         Fast-Food-Fast &copy; 2018 &nbsp; Developed by
         <b>Juwon.</b>
