--- a/UI/admin/edit-food-items.html
+++ b/UI/admin/edit-food-items.html
@@ -80,7 +80,7 @@
               </div>
               <br/>
               <div class="">
-                <input type="submit" class="btn primary-colour white-text" value="Modify food" />
+                <input type="submit" class="btn blue-bg-colour white-text" value="Modify food" />
               </div>
 
             </form>
@@ -93,7 +93,7 @@
 
 
   <footer>
-    <div class="primary-colour">
+    <div class="blue-bg-colour">
       <div class="text-center white-text">
         Fast-Food-Fast &copy; 2018 &nbsp; Developed by
         <b>Juwon.</b>
