--- a/UI/admin/view-order.html
+++ b/UI/admin/view-order.html
@@ -25,7 +25,7 @@
         <div class="">
           <h1>Are you sure?</h1>
           <form onsubmit="redirectTo('decline-confirmation.html'); return false;">
-            <input type="submit" class="btn secondary-colour white-text" value="Yes" />
+            <input type="submit" class="btn red-bg-colour white-text" value="Yes" />
             <button type="button" onclick="modalClosePopup(); return false;" class="btn btn-secondary modal-close">No</button>
           </form>
           <br />
@@ -90,7 +90,7 @@
           <button class="green-bg white-text">
             <a href="accept-order-successful.html" class="white-text">Accept</a>
           </button>
-          <button class="secondary-colour white-text">
+          <button class="red-bg-colour white-text">
             <a href="" onclick="modalPopup(); return false;" class="white-text">Decline</a>
           </button>
         </div>
@@ -104,7 +104,7 @@
   </main>
   <!-- Main content Ends -->
   <footer>
-    <div class="primary-colour">
+    <div class="blue-bg-colour">
       <div class="text-center white-text">
         Fast-Food-Fast &copy; 2018 &nbsp; Developed by
         <b>Juwon.</b>
