--- a/UI/all-food-items.html
+++ b/UI/all-food-items.html
@@ -43,7 +43,7 @@
                 <h3>Traditional French dessert</h3>
                 <p>Price: &#8358;1500</p>
               </div>
-              <button class="primary-colour white-text">
+              <button class="blue-bg-colour white-text">
                 <a href="login.html" class="white-text">Order now</a>
               </button>
             </div>
@@ -58,7 +58,7 @@
                 <h3>Sweet italian pastery</h3>
                 <p>Price: &#8358;1500</p>
               </div>
-              <button class="primary-colour white-text">
+              <button class="blue-bg-colour white-text">
                 <a href="login.html" class="white-text">Order now</a>
               </button>
 
@@ -74,7 +74,7 @@
                 <h3>Decadent Sugary Fruit Puff</h3>
                 <p>Price: &#8358;1500</p>
               </div>
-              <button class="primary-colour white-text">
+              <button class="blue-bg-colour white-text">
                 <a href="login.html" class="white-text">Order now</a>
               </button>
 
@@ -89,7 +89,7 @@
                 <h3>Freshly Baked Sausages</h3>
                 <p>Price: &#8358;1500</p>
               </div>
-              <button class="primary-colour white-text">
+              <button class="blue-bg-colour white-text">
                 <a href="login.html" class="white-text">Order now</a>
               </button>
 
@@ -111,7 +111,7 @@
                 <h3>Coffee</h3>
                 <p>Price: &#8358;1500</p>
               </div>
-              <button class="primary-colour white-text">
+              <button class="blue-bg-colour white-text">
                 <a href="login.html" class="white-text">Order now</a>
               </button>
             </div>
@@ -126,7 +126,7 @@
                 <h3>Latte</h3>
                 <p>Price: &#8358;1500</p>
               </div>
-              <button class="primary-colour white-text">
+              <button class="blue-bg-colour white-text">
                 <a href="login.html" class="white-text">Order now</a>
               </button>
 
@@ -142,7 +142,7 @@
                 <h3>Clean Clear Water</h3>
                 <p>Price: &#8358;1500</p>
               </div>
-              <button class="primary-colour white-text">
+              <button class="blue-bg-colour white-text">
                 <a href="login.html" class="white-text">Order now</a>
               </button>
 
@@ -157,7 +157,7 @@
                 <h3>Cuba Libre cocktail</h3>
                 <p>Price: &#8358;1500</p>
               </div>
-              <button class="primary-colour">
+              <button class="blue-bg-colour">
                 <a href="login.html" class="white-text">Order now</a>
               </button>
 
@@ -177,7 +177,7 @@
   </main>
   <!-- Main content Ends -->
   <footer>
-    <div class="primary-colour">
+    <div class="blue-bg-colour">
       <div class="text-center white-text">
         Fast-Food-Fast &copy; 2018 &nbsp; Developed by
         <b>Juwon.</b>
