--- a/UI/index.html
+++ b/UI/index.html
@@ -35,7 +35,7 @@
             Second'</p>
         </div>
         <div class="top-hero-btn">
-          <button class="primary-colour ">
+          <button class="blue-bg-colour ">
             <a href="login.html" class="white-text">Order now</a>
           </button>
           <button class="green-bg">
@@ -60,7 +60,7 @@
                 <h3>Vegan burger buckwheat</h3>
                 <p>Price: &#8358;1500</p>
               </div>
-              <button class="primary-colour white-text">
+              <button class="blue-bg-colour white-text">
                 <a href="login.html" class="white-text">Order now</a>
               </button>
             </div>
@@ -75,7 +75,7 @@
                 <h3>Chicken Shawarma</h3>
                 <p>Price: &#8358;1500</p>
               </div>
-              <button class="primary-colour white-text">
+              <button class="blue-bg-colour white-text">
                 <a href="login.html" class="white-text">Order now</a>
               </button>
 
@@ -91,7 +91,7 @@
                 <h3>Ham Sandwiches</h3>
                 <p>Price: &#8358;1500</p>
               </div>
-              <button class="primary-colour white-text">
+              <button class="blue-bg-colour white-text">
                 <a href="login.html" class="white-text">Order now</a>
               </button>
 
@@ -106,7 +106,7 @@
                 <h3>Ata-Rodo Pizza</h3>
                 <p>Price: &#8358;1500</p>
               </div>
-              <button class="primary-colour white-text">
+              <button class="blue-bg-colour white-text">
                 <a href="login.html" class="white-text">Order now</a>
               </button>
 
@@ -126,7 +126,7 @@
   </main>
   <!-- Main content Ends -->
   <footer>
-    <div class="primary-colour">
+    <div class="blue-bg-colour">
       <div class="text-center white-text">
         Fast-Food-Fast &copy; 2018 &nbsp; Developed by
         <b>Juwon.</b>
