--- a/UI/signup.html
+++ b/UI/signup.html
@@ -52,7 +52,7 @@
               </div>
               <br/>
               <div class="">
-                <input type="submit" class="btn primary-colour white-text" value="Sign Up" />
+                <input type="submit" class="btn blue-bg-colour white-text" value="Sign Up" />
               </div>
               <br/>
               <div class="">
@@ -69,7 +69,7 @@
   </main>
   <!-- Main content Ends -->
   <footer>
-    <div class="primary-colour">
+    <div class="blue-bg-colour">
       <div class="text-center white-text">
         Fast-Food-Fast &copy; 2018 &nbsp; Developed by
         <b>Juwon.</b>
