--- a/UI/users/all-food-items.html
+++ b/UI/users/all-food-items.html
@@ -59,7 +59,7 @@
                 <h3>Traditional French dessert</h3>
                 <p>Price: &#8358;1500</p>
               </div>
-              <button class="primary-colour white-text">
+              <button class="blue-bg-colour white-text">
                 <a href="confirm-order.html" class="white-text">Order now</a>
               </button>
             </div>
@@ -74,7 +74,7 @@
                 <h3>Sweet italian pastery</h3>
                 <p>Price: &#8358;1500</p>
               </div>
-              <button class="primary-colour white-text">
+              <button class="blue-bg-colour white-text">
                 <a href="confirm-order.html" class="white-text">Order now</a>
               </button>
 
@@ -90,7 +90,7 @@
                 <h3>Decadent Sugary Fruit Puff</h3>
                 <p>Price: &#8358;1500</p>
               </div>
-              <button class="primary-colour white-text">
+              <button class="blue-bg-colour white-text">
                 <a href="confirm-order.html" class="white-text">Order now</a>
               </button>
 
@@ -105,7 +105,7 @@
                 <h3>Freshly Baked Sausages</h3>
                 <p>Price: &#8358;1500</p>
               </div>
-              <button class="primary-colour white-text">
+              <button class="blue-bg-colour white-text">
                 <a href="confirm-order.html" class="white-text">Order now</a>
               </button>
 
@@ -127,7 +127,7 @@
                 <h3>Coffee</h3>
                 <p>Price: &#8358;1500</p>
               </div>
-              <button class="primary-colour white-text">
+              <button class="blue-bg-colour white-text">
                 <a href="confirm-order.html" class="white-text">Order now</a>
               </button>
             </div>
@@ -142,7 +142,7 @@
                 <h3>Latte</h3>
                 <p>Price: &#8358;1500</p>
               </div>
-              <button class="primary-colour white-text">
+              <button class="blue-bg-colour white-text">
                 <a href="confirm-order.html" class="white-text">Order now</a>
               </button>
 
@@ -158,7 +158,7 @@
                 <h3>Clean Clear Water</h3>
                 <p>Price: &#8358;1500</p>
               </div>
-              <button class="primary-colour white-text">
+              <button class="blue-bg-colour white-text">
                 <a href="confirm-order.html" class="white-text">Order now</a>
               </button>
 
@@ -173,7 +173,7 @@
                 <h3>Cuba Libre cocktail</h3>
                 <p>Price: &#8358;1500</p>
               </div>
-              <button class="primary-colour">
+              <button class="blue-bg-colour">
                 <a href="confirm-order.html" class="white-text">Order now</a>
               </button>
 
@@ -195,7 +195,7 @@
 
 
   <footer>
-    <div class="primary-colour">
+    <div class="blue-bg-colour">
       <div class="text-center white-text">
         Fast-Food-Fast &copy; 2018 &nbsp; Developed by
         <b>Juwon.</b>
