--- a/UI/users/confirm-order.html
+++ b/UI/users/confirm-order.html
@@ -55,7 +55,7 @@
           <h3>Quantity(packs):<input type="number" id="quantity" /></h3>
 
           <h3>Total: &#8358;1500</h3>
-          <button class="primary-colour">
+          <button class="blue-bg-colour">
             <a href="order-successful.html" class="white-text">Confirm Order</a>
           </button>
 
@@ -71,7 +71,7 @@
 
 
   <footer>
-    <div class="primary-colour">
+    <div class="blue-bg-colour">
       <div class="text-center white-text">
         Fast-Food-Fast &copy; 2018 &nbsp; Developed by
         <b>Juwon.</b>
