--- a/UI/users/edit-order.html
+++ b/UI/users/edit-order.html
@@ -57,7 +57,7 @@
               <h3>Quantity(packs):</h3><input type="number" id="quantity" />
 
               <h3>Total: &#8358;1500</h3>
-              <button class="primary-colour white-text">
+              <button class="blue-bg-colour white-text">
                 <a href="edit-order-successful.html" class="white-text">Modify Order</a>
               </button>
             </div>
@@ -74,7 +74,7 @@
 
 
   <footer>
-    <div class="primary-colour">
+    <div class="blue-bg-colour">
       <div class="text-center white-text">
         Fast-Food-Fast &copy; 2018 &nbsp; Developed by
         <b>Juwon.</b>
