--- a/UI/users/order-history.html
+++ b/UI/users/order-history.html
@@ -50,7 +50,7 @@
         <p>Sort by: <a href="#">Date,</a> <a href="#">Order No</a></p>
         <p>Filter by Date</p>
         <input type="date" class="datepicker" />
-        <button class="primary-colour white-text">Filter</button>
+        <button class="blue-bg-colour white-text">Filter</button>
 
         <!--Flex container for food item display starts here-->
         <div class="flex-container">
@@ -159,7 +159,7 @@
 
 
   <footer>
-    <div class="primary-colour">
+    <div class="blue-bg-colour">
       <div class="text-center white-text">
         Fast-Food-Fast &copy; 2018 &nbsp; Developed by
         <b>Juwon.</b>
