--- a/UI/users/pending-orders.html
+++ b/UI/users/pending-orders.html
@@ -24,7 +24,7 @@
         <div class="">
           <h1>Are you sure ?</h1>
           <form onsubmit="redirectTo('cancel-order-successful.html'); return false;">
-            <input type="submit" class="btn secondary-colour white-text" value="Yes" />
+            <input type="submit" class="btn red-bg-colour white-text" value="Yes" />
             <button type="button" onclick="modalClosePopup(); return false;" class="btn btn-secondary modal-close">No</button>
           </form>
           <br />
@@ -82,7 +82,7 @@
               <button class="green-bg white-text">
                 <a href="edit-order.html" class="white-text">Edit</a>
               </button>
-              <button class="secondary-colour white-text">
+              <button class="red-bg-colour white-text">
                 <a href="" onclick="modalPopup(); return false;" class="white-text">Cancel</a>
               </button>
             </div>
@@ -100,7 +100,7 @@
               <button class="green-bg white-text">
                 <a href="edit-order.html" class="white-text">Edit</a>
               </button>
-              <button class="secondary-colour white-text">
+              <button class="red-bg-colour white-text">
                 <a href="" onclick="modalPopup(); return false;" class="white-text">Cancel</a>
               </button>
 
@@ -119,7 +119,7 @@
               <button class="green-bg white-text">
                 <a href="edit-order.html" class="white-text">Edit</a>
               </button>
-              <button class="secondary-colour white-text">
+              <button class="red-bg-colour white-text">
                 <a href="" onclick="modalPopup(); return false;" class="white-text">Cancel</a>
               </button>
 
@@ -137,7 +137,7 @@
               <button class="green-bg white-text">
                 <a href="edit-order.html" class="white-text">Edit</a>
               </button>
-              <button class="secondary-colour white-text">
+              <button class="red-bg-colour white-text">
                 <a href="" onclick="modalPopup(); return false;" class="white-text">Cancel</a>
               </button>
 
@@ -152,7 +152,7 @@
 
 
   <footer>
-    <div class="primary-colour">
+    <div class="blue-bg-colour">
       <div class="text-center white-text">
         Fast-Food-Fast &copy; 2018 &nbsp; Developed by
         <b>Juwon.</b>
