--- a/UI/a-skeleton.html
+++ b/UI/a-skeleton.html
@@ -55,7 +55,7 @@
   </main>
   <!-- Main content Ends -->
   <footer>
-    <div class="primary-colour">
+    <div class="blue-bg-colour">
       <div class="text-center white-text">
         Fast-Food-Fast &copy; 2018 &nbsp; Developed by
         <b>Juwon.</b>
