--- a/UI/admin/login.html
+++ b/UI/admin/login.html
@@ -43,7 +43,7 @@
               </div>
               <br/>
               <div class="">
-                <input type="submit" class="btn primary-colour white-text" value="Sign In" />
+                <input type="submit" class="btn blue-bg-colour white-text" value="Sign In" />
               </div>
 
             </form>
@@ -54,7 +54,7 @@
   </main>
   <!-- Main content Ends -->
   <footer>
-    <div class="primary-colour">
+    <div class="blue-bg-colour">
       <div class="text-center white-text">
         Fast-Food-Fast &copy; 2018 &nbsp; Developed by
         <b>Juwon.</b>
