--- a/UI/users/my-account.html
+++ b/UI/users/my-account.html
@@ -74,7 +74,7 @@
   <!-- Main content Ends -->
 
   <footer>
-    <div class="primary-colour">
+    <div class="blue-bg-colour">
       <div class="text-center white-text">
         Fast-Food-Fast &copy; 2018 &nbsp; Developed by
         <b>Juwon.</b>
