Make button to show more items on food pages look more like a button
Make button that shows more items align with the page design, so it won't look out of place

--- a/UI/all-food-items.html
+++ b/UI/all-food-items.html
@@ -167,8 +167,8 @@
 
         </div>
         <div class="text-center">
-          <button class="">
-            <a>Show More</a>
+          <button class="blue-bg-colour white-text">
+            <a>Show more items</a>
           </button>
         </div>
       </div>
