--- a/UI/index.html
+++ b/UI/index.html
@@ -116,8 +116,8 @@
 
         </div>
         <div class="text-center">
-          <button class="">
-            <a>Show More</a>
+          <button class="blue-bg-colour white-text">
+            <a href="all-food-items.html">Show more items</a>
           </button>
         </div>
       </div>
@@ -126,7 +126,7 @@
   </main>
   <!-- Main content Ends -->
   <footer>
-    <div class="blue-bg-colour">
+    <div class="">
       <div class="text-center white-text">
         Fast-Food-Fast &copy; 2018 &nbsp; Developed by
         <b>Juwon.</b>
