--- a/UI/signup.html
+++ b/UI/signup.html
@@ -69,7 +69,7 @@
   </main>
   <!-- Main content Ends -->
   <footer>
-    <div class="blue-bg-colour">
+    <div class="">
       <div class="text-center white-text">
         Fast-Food-Fast &copy; 2018 &nbsp; Developed by
         <b>Juwon.</b>
