--- a/UI/u-skeleton.html
+++ b/UI/u-skeleton.html
@@ -48,7 +48,7 @@
 
 
   <footer>
-    <div class="blue-bg-colour">
+    <div class="">
       <div class="text-center white-text">
         Fast-Food-Fast &copy; 2018 &nbsp; Developed by
         <b>Juwon.</b>
